--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+/import-summary.txt
+/gradlew.bat
+/gradlew
+/gradle/
+/.idea/
